Added reference to GnuPlusLinuxDAL to project file

--- a/GnuPlusLinux/GnuPlusLinux.csproj
+++ b/GnuPlusLinux/GnuPlusLinux.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GnuPlusLinuxDAL\GnuPlusLinuxDAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="Views\Gnu\GuildNews.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
